<resources>
    <string name="app_name">Who\'s Next</string>
    <string name="app_provider">com.app.whosnextapp.provider</string>
    <string name="text_who_next">Who\'s this?</string>
    <string name="what_your_talent">What\'s Your Talent \?</string>
    <string name="text_who_s_next_app"> Who\'s next app</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="create_your_account">Create Your Account?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="text_terms_conditions_privacy_policy">I Accept Privacy Policy Terms &amp; Condition</string>
    <string name="err_password_and_new_password_are_same">Old password and new password can not be same</string>
    <string name="err_empty_retype_password">Please retype your new password</string>
    <string name="err_empty_current_password">Please enter your old password</string>
    <string name="current_password">current password</string>
    <string name="retype_new_password">retype new password</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="submit">Submit</string>
    <string name="verification_code">Verification Code</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="msg_server_error_wrong_password">Current password is wrong.</string>
    <string name="err_empty_user_name">Please enter your username</string>
    <string name="err_empty_last_name">Please enter your last name</string>
    <string name="err_empty_first_name">Please enter your first name</string>
    <string name="err_empty_type_name">Please Enter type name</string>
    <string name="err_empty_description">Please Enter Description</string>
    <string name="err_empty_button_name">Please Enter Button Name</string>
    <string name="err_empty_button_link">Please Enter Button Link</string>
    <string name="err_empty_add_at_least_one_snippet">Please add at least one snippet.</string>
    <string name="err_empty_password">Please enter your password</string>
    <string name="err_empty_verification_code">Please enter verificationcode.</string>
    <string name="msg_server_error">Error occurred, Please try again.</string>
    <string name="err_username_password_in_correct">Username or Password is invalid.</string>
    <string name="err_empty_emailId">Please enter your email ID</string>
    <string name="err_valid_emailId">Please enter your valid email ID</string>
    <string name="err_check_confirm_emailId">Please Check your Confirm email id.</string>
    <string name="err_check_confirm_new_password">Your confirmed password does not match to password</string>
    <string name="It_is_not_valid_code">It is not valid code.Please enter the correct verification code</string>
    <string name="err_empty_new_password">Please enter new password.</string>
    <string name="err_empty_Confirm_new_password">Please enter Confirm new Password.</string>
    <string name="err_empty_Confirm_new_email">Please enter your confirmed email ID</string>
    <string name="err_password_not_equals">Your confirmed password does not match to password</string>
    <string name="err_required_terms_policy">Please accept our terms &amp; condition and privacy policy</string>
    <string name="select_video">Select video</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="msg_NO_INTERNET_TITLE">Internet connection required.</string>
    <string name="msg_NO_INTERNET_MSG">You need an active internet connection to access this feature of the app.</string>
    <string name="msg_goto_settings">SETTINGS</string>
    <string name="error_msg_connection_timeout">The request timed out please try again.</string>
    <string name="video_option">Capture Video</string>
    <string name="text_pick_video">Pick video from gallery</string>
    <string name="text_video">Add Introduction Video (Max 30 Sec)</string>
    <string name="register">Register</string>
    <string name="select_talent">Select your talent or business please</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="request_camera_permission">We need Camera &amp; Gallery permissions for Who\'s Next App</string>
    <string name="on_denied_permission">If you reject permission,you can not use this service
        <br />
        Please turn on permissions at [Setting] > [Permission]
    </string>
    <string name="msg_update_profile">Profile Updated</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="msg_password_change_success">Password change successfully.</string>
    <string name="search">Search</string>
    <string name="trim_videos">Trim video</string>
    <string name="trim_video_time">00:00 - 00:30</string>
    <string name="time_00">00:00</string>
    <string name="max_limit_reached">Please select your talent / business less than three.</string>
    <string name="err_min_length_password">Password should be minimum 6 Characters.</string>
    <string name="ok">OK</string>
    <string name="take_from_camera">Take From Camera</string>
    <string name="select_from_library">Select From Library</string>
    <string name="trim">Trim</string>
    <string name="err_valid_username">Username must be 4 characters.</string>
    <string name="err_required_upload">Please Upload Image or Video</string>
    <string name="err_required_category">Please select at least one talent of you</string>
    <string name="wrong_data_content">There was something wrong with your data. Please try again.</string>
    <string name="search_talent">Add your talent or business please</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="your_confirm_email_id_does_not_match">Your confirmed email id does not match to email id</string>
    <string name="registration_success">Registration successful.</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="introduction_bio_video">Introduction Bio Video</string>
    <string name="about_self">About Self</string>
    <string name="city">City</string>
    <string name="category">Category</string>
    <string name="make_this_profile_private">Make this profile private</string>
    <string name="edit_profile">Edit profile</string>
    <string name="views">Views</string>
    <string name="private_user">User is private</string>
    <string name="profile_is_private">When your profile is private.Only people you approve can see your photos and videos.Your existing followers won\'t be effected.</string>
    <string name="group_video">Group video</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="website">Website</string>
    <string name="replace_video">Replace video</string>
    <string name="update">Update</string>
    <string name="website_1">Website-1</string>
    <string name="website_2">Website-2</string>
    <string name="website_3">Website-3</string>
    <string name="website_4">Website-4</string>
    <string name="website_5">Website-5</string>
    <string name="describe_yourself_in_1_word">Describe yourself in 1 word</string>
    <string name="cancel">Cancel</string>
    <string name="de_active_account">Deactive Account</string>
    <string name="pictures_of_you">Pictures of you</string>
    <string name="http">http://</string>
    <string name="text_select_category">Select Category</string>
    <string name="un_follow">Unfollow</string>
    <string name="follow">+ Follow</string>
    <string name="requested">Requested</string>
    <string name="notification">Notification</string>
    <string name="text_feed_post">Feed Post</string>
    <string name="text_share_to">Share To</string>
    <string name="text_write_caption">Write Caption</string>
    <string name="text_message">Message</string>
    <string name="text_coming_soon">Coming Soon</string>
    <string name="msg_feed_shared">Feed has been shared</string>
    <string name="text_capture_video">Capture video</string>
    <string name="terms_condition_1">Terms &amp; condition:</string>
    <string name="msg_now">now</string>
    <string name="text_seconds">%1$s s</string>
    <string name="text_min">%1$s m</string>
    <string name="text_minutes">%1$s m</string>
    <string name="text_day">%1$s day</string>
    <string name="text_days">%1$s days</string>
    <string name="text_hr">%1$s h</string>
    <string name="text_views">%1$d Views</string>
    <string name="text_uploading">Uploading\.\.\.</string>
    <string name="text_saving">Saving\.\.\.\.</string>
    <string name="text_tag_people">Tag people</string>
    <string name="text_tap_tag_people">Tap to select people</string>
    <string name="msg_picture_shared">Picture has been shared</string>
    <string name="text_media">Media</string>
    <string name="feed">Feed</string>
    <string name="are_you_sure_want_to_logout">Are you sure you want to logout?</string>
    <string name="de_active_your_profile">Are you sure want to deactivate your profile?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="text_caption">Caption</string>
    <string name="text_follow_request_approve">Follow request : approve or ignore requests</string>
    <string name="text_follow_request">Follow requests</string>
    <string name="text_no_user_found">No user found</string>
    <string name="text_home">Home</string>
    <string name="text_snippets">Snippets</string>
    <string name="text_snippets_details">Snippet details</string>
    <string name="text_tap_on_image">Tap on image and play again</string>
    <string name="text_no_snippet_detail">No snippet details</string>
    <string name="text_please_enter_snippet">Please enter snippet details</string>
    <string name="text_write_snippet">Write snippet details</string>
    <string name="text_tap_icon">Tap on icon to select image, video or audio</string>
    <string name="text_image">Image</string>
    <string name="text_video_simple">Video</string>
    <string name="text_audio">Audio</string>
    <string name="text_select_snippet">Browse Your Image, Video and Audio</string>
    <string name="text_browse_image">Browse Your Image</string>
    <string name="text_browse_video">Browse Your Video</string>
    <string name="text_browse_audio">Browse Your Audio</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="msg_snippet_picture_shared">Snippet has been uploaded</string>
    <string name="text_posts">Posts</string>
    <string name="text_add_picture">Add Picture</string>
    <string name="text_add_name">Add Name</string>
    <string name="text_add_description">Add Description</string>
    <string name="please_type_description">Please type description</string>
    <string name="please_type_name">Please type name</string>
    <string name="add_carnation_during_upload">Add Carnation during Upload</string>
    <string name="white_carnation">White Carnations-love and good luck fighting cancer</string>
    <string name="pink_and_white">Pink and White Carnations-means you have beat cancer</string>
    <string name="scrip_carnations">Scripped Carnations-some one passed away from cancer</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="date_of_passing">Date of Passing</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
</resources>